2005-12-02  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-sources.c: Another fix for lineart mode for the 
	  Epson 3490 @ 3200 DPI - this time tested

2005-12-01  Henning Meier-Geinitz <henning@meier-geinitz.de>
	
	* doc/descriptions/unsupported.desc: Added link for Corex Cardscan
	  500.

2005-11-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added UMAX Astra 4100.
	* tools/hotplug/libsane.usermap: Added Epson Stylus CX4200.

2005-11-28  Jochen Eisinger <jochen@penguin-breeder.org>

	* sanei/sanei_pa4s2.c: incorrect test of a bit mask.

2005-11-28  Stephane Voltz <stefdev@modulonet.fr>

	* backend/umax_pp_low.c: ifdef'ed forgottent debug statements

2005-11-28  Stephane Voltz <stefdev@modulonet.fr>

	* backend/umax_pp_low.c: fixed 'blue tint' on scanning area border
	  by increasing shading coefficient on dark areas

2005-11-26  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-sources.c: Fix lineart mode for Epson 3490
	* doc/descriptions/snapscan.desc: Update status for Benq 5000

2005-11-26  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-scsi.c: Fix for Benq 5000
	* backend/snapscan.conf: Replace esfw52.bin with dummy filename entry

2005-11-25  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/artec_eplus48u.conf, backend/snapscan.conf: Use default
	  firmware dirs in config files
	* doc/sane-artec_eplus48u.man, doc/sane-snapscan.man: Use default
	  firmare dirs in man pages

2005-11-25  Ulrich Deiters <ulrich.deiters@uni-koeln.de>

	* backend/canon-sane: fixed usage of an uninitialized variable

2005-11-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.da.po: Updated Danish translation (from Mogens
	  Jaeger <mogensjaeger@get2net.dk>). 

2005-11-25  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-sources.c: Fix for grayscale / linart for Epson 3490
	  at 3200 DPI

2005-11-25  Mattias Ellert <mattias.ellert@tsl.uu.se>
